Proper invocation of location fixed

--- a/Views/Shared/_Layout_Template.cshtml
+++ b/Views/Shared/_Layout_Template.cshtml
@@ -45,7 +45,7 @@
             brWS.onmessage = function (event) {
                 if (event.data === "REFRESH") {
                     console.log("BrowserRefresh, reload");
-                    location.reload();
+                    window.location.reload();
                 }
             };
             brWS.onerror = function (event) {
